# mathlib

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: msys2-clang.yml  msys2.yml  ubuntu18.yml  ubuntu20.yml  ubuntu22.yml  vs16-ci.yml  vs17-ci.yml  vs17-clang-ci.yml
cmake/: mathlib-config.cmake.in
examples/integration/: CMakeLists.txt  build.cmd
examples/integration/src/: main.cpp
examples/testing/: CMakeLists.txt  build.cmd
examples/testing/src/: tests.cpp
include/: common.h  constants.h  functions.h  mat3.h  vec2.h
include/impl/: mat34.h  vec2.h
libs/: CMakeLists.txt
libs/mathlib/: CMakeLists.txt
libs/mathlib/include/: aabb.h  aabb2.h  aabb3.h  caabb2.h  caabb3.h  circle.h  colorhsv.h  colorrgb.h  colorrgba.h  common.h  frustum.h  functions.h  interpolation.h  line2.h  line3.h  linearequations.h  mat2.h  mat3.h  mat34.h  mat4.h  mathlib.h  plane.h  quat.h  ray2.h  ray3.h  sphere.h  spline3.h  tri2.h  vec2.h  vec3.h  vec4.h
libs/mathlib/include/impl/: aabb.h  aabb2.h  aabb3.h  caabb2.h  caabb3.h  circle.h  colorhsv.h  colorrgb.h  colorrgba.h  constants.h  frustum.h  line2.h  line3.h  linearequations.h  mat2.h  mat3.h  mat34.h  mat4.h  plane.h  quat.h  ray2.h  ray3.h  sphere.h  spline3.h  tri2.h  vec2.h  vec3.h  vec4.h
libs/mathlib/src/: mathlib.cpp
libs/testlib/: CMakeLists.txt
libs/testlib/include/: mathlib_testlib.h
libs/testlib/include/impl/: catch_matchers.h  catch_matchers_aabb.h  catch_matchers_aabb2.h  catch_matchers_aabb3.h  catch_matchers_caabb2.h  catch_matchers_caabb3.h  catch_matchers_circle.h  catch_matchers_colorhsv.h  catch_matchers_colorrgb.h  catch_matchers_colorrgba.h  catch_matchers_frustum.h  catch_matchers_line2.h  catch_matchers_line3.h  catch_matchers_mat2.h  catch_matchers_mat3.h  catch_matchers_mat34.h  catch_matchers_mat4.h  catch_matchers_plane.h  catch_matchers_quat.h  catch_matchers_ray2.h  catch_matchers_ray3.h  catch_matchers_sphere.h  catch_matchers_vec2.h  catch_matchers_vec3.h  catch_matchers_vec4.h
src/: CMakeLists.txt
tests/: CMakeLists.txt
tests/src/: test_functions.cpp  test_interpolation.cpp  test_mat2.cpp  test_mat3.cpp  test_mat34.cpp  test_vec3.cpp  utils.h
tests/src/matchers/: catch_matchers.h  catch_matchers_mat2.h  catch_matchers_mat3.h  catch_matchers_mat34.h  catch_matchers_quat.h  catch_matchers_vec2.h  catch_matchers_vec3.h
tests/testlib/: CMakeLists.txt
tests/testlib/include/impl/: catch_matchers.h  catch_matchers_mat3.h  catch_matchers_mat34.h  catch_matchers_vec3.h
tests/testlib/src/: mathlib_testlib.cpp
tests/tests/: CMakeLists.txt
tests/tests/src/: main.cpp  test_aabb.cpp  test_aabb2.cpp  test_aabb3.cpp  test_caabb2.cpp  test_caabb3.cpp  test_circle.cpp  test_colorhsv.cpp  test_colorrgb.cpp  test_colorrgba.cpp  test_frustum.cpp  test_functions.cpp  test_interpolation.cpp  test_line2.cpp  test_line3.cpp  test_linearequations.cpp  test_mat2.cpp  test_mat3.cpp  test_mat34.cpp  test_mat4.cpp  test_plane.cpp  test_quat.cpp  test_ray2.cpp  test_ray3.cpp  test_sphere.cpp  test_spline3.cpp  test_tri2.cpp  test_vec2.cpp  test_vec3.cpp  test_vec4.cpp  utils.h
